# latex_flat

./: .gitignore  LICENSE  README.md  bibliography.bib  flatten.py  pyproject.toml
.github/workflows/: publish.yml
